--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "brc",
+  "name": "samp react template",
   "version": "1.0.0",
   "private": true,
   "dependencies": {
@@ -7,7 +7,6 @@
     "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^12.8.1",
     "bulma": "^0.9.2",
-    "next": "^10.1.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-icons": "^4.2.0",
